Refactoring and simplifying the API and db model.
